--- a/html/servicios.html
+++ b/html/servicios.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Potenciamos tu marca con impacto audiovisual. Descubre nuestros servicios">
+
 
     <title>SERVICIOS-NOMADS PRODUCTION</title>
 
