--- a/html/contacto.html
+++ b/html/contacto.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Conéctate con nosotros para soluciones profesionales.">
+    
 
     <title>CONTACTO-NOMADS PRODUCTION</title>
 
