--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="Club de fans firulai la mejor del mundo">
-    <meta name="keywords" content="">
+    <meta name="description" content="Capturando esencias a través de contenido audiovisual inspirador. ¡Bienvenidos!">
 
     <title>Nomads Productión</title>
 
