Corrección tercera entrega

--- a/html/clientes.html
+++ b/html/clientes.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explora nuestra cartera de clientes satisfechos">
+    <meta name="description"
+        content="Descubre cómo nuestra fotografía y video en México y Argentina han dejado una huella en nuestros clientes. Explora las historias que hemos capturado en Nomads Production para crear recuerdos duraderos.">
 
 
-    <title>CLIENTES-NOMADS PRODUCTION</title>
+    <title>Nuestros Clientes - NOMADS PRODUCTION</title>
 
     <!-- CSS Boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -21,6 +22,8 @@
 
     <link rel="shortcut icon" href="../img/NP-removebg-preview.png" type="image/x-icon">
 
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 
 </head>
@@ -32,7 +35,7 @@
     <header class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">
-                <img class="logo img-fluid" src="../img/Logo-blanco.png" alt="Logo">
+                <img class="logo img-fluid" src="../img/Logo-blanco.png" alt="Logo Nomads Production">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -69,34 +72,34 @@
     <main>
 
         <div class="px-3 text-light text-center ms-5 me-5 mt-5 mb-5">
-            <h1>CLIENTES</h1>
+            <h1 data-aos="fade-down">CLIENTES</h1>
         </div>
 
         <div class="row p-5 row row-cols-auto fondoClientes">
             <div class="col-xl-2  col-md-6 col-sm-12 card-ing-top p-3">
-                <img class="img-fluid" src="../img/logos clientes/bancodealimentos.png" alt="bancodealimentos">
+                <img class="img-fluid" src="../img/logos clientes/bancodealimentos.png" alt="logo banco de alimentos">
             </div>
             <div class="col-xl-3  col-md-6 col-sm-12 card-ing-top p-3">
-                <img class="img-fluid" src="../img/logos clientes/dove-logo-1.png" alt="dove">
+                <img class="img-fluid" src="../img/logos clientes/dove-logo-1.png" alt="logo dove">
             </div>
             <div class="col-xl-3  col-md-6 col-sm-12 card-ing-top p-3">
-                <img class="img-fluid" src="../img/logos clientes/jhon deere.png" alt="jhondeere">
+                <img class="img-fluid" src="../img/logos clientes/jhon deere.png" alt="logo jhondeere">
             </div>
             <div class="col-xl-3  col-md-6 col-sm-12 card-ing-top p-3">
                 <img class="img-fluid" src="../img/logos clientes/logo-gobierno-tucuman-horizontal.png"
-                    alt="gobierno de tucuman">
+                    alt="logo gobierno de tucuman">
             </div>
             <div class="col-xl-3  col-md-6 col-sm-12 card-ing-top p-3">
                 <img class="img-fluid"
                     src="../img/logos clientes/png-transparent-bmw-car-logo-bmw-logo-trademark-logo-car-thumbnail.png"
-                    alt="bmw">
+                    alt="logo bmw">
             </div>
             <div class="col-xl-3  col-md-6 col-sm-12 card-ing-top p-3">
-                <img class="img-fluid" src="../img/logos clientes/sonymusic.png" alt="sonymusic">
+                <img class="img-fluid" src="../img/logos clientes/sonymusic.png" alt="logo sony music">
             </div>
             <div class="col-xl-3  col-md-6 col-sm-12 card-ing-top p-3">
                 <img class="img-fluid" src="../img/logos clientes/The reef resort and spa.svg"
-                    alt="the reef resort and spa">
+                    alt="logo the reef resort and spa">
             </div>
 
         </div>
@@ -114,8 +117,8 @@
 
 
         <div class="container-fluid text-center mb-3">
-            <img class="banderas" src="../img/banderaMexico.png" alt="banderaDeMexicoxico">
-            <img class="banderas" src="../img/banderaArgentina.png" alt="banderaDeArgentina">
+            <img class="banderas" src="../img/banderaMexico.png" alt="bandera De Mexico">
+            <img class="banderas" src="../img/banderaArgentina.png" alt="bandera De Argentina">
         </div>
 
         <div class="container-fluid text-center text-light">
@@ -128,7 +131,7 @@
 
         <div class="container">
             <div class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-                <p class="col-md-4 mb-0 text-light">&copy; 2023 Nomdas Production <br> Todos los derechos reservados</p>
+                <p class="col-md-4 mb-0 text-light">&copy; 2023 Nomdas Production. Todos los derechos reservados</p>
 
                 <a href="/"
                     class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
@@ -163,6 +166,12 @@
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
 
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
