--- a/html/contacto.html
+++ b/html/contacto.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Conéctate con nosotros para soluciones profesionales.">
-    
+    <meta name="description"
+        content="Contáctanos en Nomads Production. Convertimos tus momentos en recuerdos inolvidables. Colaboramos en proyectos de fotografía y video en México y Argentina.">
 
-    <title>CONTACTO-NOMADS PRODUCTION</title>
+
+    <title>Contacta con nosotros - NOMADS PRODUCTION</title>
 
     <!-- CSS Boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -21,6 +22,9 @@
 
     <link rel="shortcut icon" href="../img/NP-removebg-preview.png" type="image/x-icon">
 
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 
 
 </head>
@@ -32,7 +36,7 @@
     <header class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">
-                <img class="logo img-fluid" src="../img/Logo-blanco.png" alt="Logo">
+                <img class="logo img-fluid" src="../img/Logo-blanco.png" alt="Logo Nomads Production">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -68,13 +72,21 @@
 
     <main>
         <div class="px-3 text-light text-center ms-2 me-5 mt-5 mb-5">
-            <h1>CONTACTO</h1>
-            <p class="lead text-light">" Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum nemo suscipit
-                provident quod odit porro numquam dolore."</p>
+            <h1 data-aos="fade-down">CONTACTO</h1>
+            <p data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0"
+                class="lead text-light">¿Buscas capturar la esencia de tus momentos más especiales en México o
+                Argentina?
+                En Nomads Production, somos expertos en transformar momentos en recuerdos eternos a través de la
+                magia de la fotografía y el video.
+
+                Nuestro equipo apasionado de profesionales está listo para capturar cada detalle y emoción de tus
+                eventos.
+                ¿Listo para preservar tus momentos para siempre? ¡Contáctanos ahora y
+                descubre cómo podemos hacer que tus recuerdos perduren toda la vida!</p>
         </div>
 
         <section id="contact" class="contact text-center m-5">
-            <div class="container-fluid ms-auto align-items-center">
+            <div data-aos="flip-left" class="container-fluid ms-auto align-items-center">
 
                 <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-center">
                     <form action="forms/contact.php" method="post" role="form" class="php-email-form">
@@ -97,7 +109,9 @@
                             <textarea class="form-control" name="message" rows="10" required></textarea>
                         </div>
 
-                        <div class="boton text-center text-light"><button type="submit">Enviar</button></div>
+                        <div class="boton text-center text-light"><button
+                                style="border-radius: 15px; background-color: goldenrod;color: aliceblue;"
+                                type="submit">ENVIAR</button></div>
                     </form>
                 </div>
 
@@ -118,8 +132,8 @@
 
 
         <div class="container-fluid text-center mb-3">
-            <img class="banderas" src="../img/banderaMexico.png" alt="banderaDeMexicoxico">
-            <img class="banderas" src="../img/banderaArgentina.png" alt="banderaDeArgentina">
+            <img class="banderas" src="../img/banderaMexico.png" alt="bandera de Mexico">
+            <img class="banderas" src="../img/banderaArgentina.png" alt="bandera de Argentina">
         </div>
 
         <div class="container-fluid text-center text-light">
@@ -132,7 +146,7 @@
 
         <div class="container">
             <div class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-                <p class="col-md-4 mb-0 text-light">&copy; 2023 Nomdas Production <br> Todos los derechos reservados</p>
+                <p class="col-md-4 mb-0 text-light">&copy; 2023 Nomdas Production. Todos los derechos reservados</p>
 
                 <a href="/"
                     class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
@@ -167,6 +181,12 @@
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
 
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
