--- a/html/quienessomos.html
+++ b/html/quienessomos.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Descubre quiénes somos y nuestra pasión">
+    <meta name="description"
+        content="Descubre la pasión detrás de Nomads Production. Un equipo apasionado que captura la esencia de México y Argentina a través de la lente. Conócenos mejor.">
 
-    
 
-    <title>QUIENES SOMOS-NOMADS PRODUCTION</title>
+
+    <title>Conoce quienes somos - NOMADS PRODUCTION</title>
 
     <!-- CSS Boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -22,6 +23,9 @@
 
     <link rel="shortcut icon" href="../img/NP-removebg-preview.png" type="image/x-icon">
 
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 
 
 </head>
@@ -33,7 +37,7 @@
     <header class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">
-                <img class="logo img-fluid" src="../img/Logo-blanco.png" alt="Logo">
+                <img class="logo img-fluid" src="../img/Logo-blanco.png" alt="Logo Nomads Production">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -69,38 +73,42 @@
 
     <main>
         <div class="px-3 text-light text-center ms-5 me-5 mt-5 mb-5">
-            <h1>¿QUIENES SOMOS?</h1>
-            <p class="lead text-light">" Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum nemo suscipit
-                provident quod odit porro numquam dolore. Eius nulla alias, optio quibusdam voluptatum magnam laboriosam
-                mollitia maxime quo fugit! Ullam? "</p>
+            <h1 data-aos="fade-down">¿QUIENES SOMOS?</h1>
+            <p data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0"
+                class="lead text-light">"Superando los límites de una simple etiqueta, un grupo comprometido emerge,
+                equipado con habilidades y experiencia de élite para despertar tus emociones. Te damos la bienvenida a
+                nuestro universo, donde colectivamente formamos una alianza enfocada en la producción y dirección de
+                contenido visual excepcional. Atrapamos la esencia distintiva de tu identidad, fusionándola con tus
+                principios y metas. Infundimos el deseo de explorar, desvelar diversas herencias y buscar innovadoras
+                travesías."</p>
         </div>
 
         <div class="row mb-5">
             <div class="col-xl-6 col-md-6 col-sm-12 container-fluid text-center text-light p-5">
-                <h4>Franco</h4>
-                <p class="descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero rerum iure
-                    quo
-                    ea
-                    dignissimos tempora
-                    maiores ab exercitationem quod quidem ullam qui aliquam recusandae fuga laudantium, modi eligendi
-                    voluptatibus.</p>
+                <h2 data-aos="flip-up">Franco</h2>
+                <p data-aos="flip-up" class="descripcion">Psicólogo y apasionado realizador audiovisual. Desde chico
+                    tuve una inquietud por
+                    documentar la vida misma a través de la imagen conectando con las experiencias. Actualmente trabajo
+                    de manera independiente para diferentes productoras audiovisuales realizando publicidades,
+                    videoclips y cortos documentales</p>
             </div>
 
             <div class="col-xl-6 col-md-6 col-sm-12">
-                <img class="img-fluid personas" src="../img/fotos/fran.jpeg" alt="foto franco">
+                <img data-aos="flip-up" class="img-fluid personas" src="../img/fotos/fran.jpeg"
+                    alt="Foto de Franco Rivadeo con Camara">
             </div>
 
             <div class="col-xl-6 col-md-6 col-sm-12 container-fluid text-center text-light p-5">
-                <h4>Miqueas</h4>
-                <p class="descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero rerum iure
-                    quo
-                    ea
-                    dignissimos tempora
-                    maiores ab exercitationem quod quidem ullam qui aliquam recusandae fuga laudantium, modi eligendi
-                    voluptatibus.</p>
+                <h2 data-aos="flip-up">Miqueas</h2>
+                <p data-aos="flip-up" class="descripcion">Ingeniero industrial y realizador audiovisual. Me considero
+                    una persona
+                    aventurera que siempre ve lo mejor de cada situación. Organizado y enfocado en lograr todo lo que me
+                    propongo.
+                </p>
             </div>
             <div class="col-xl-6 col-md-6 col-sm-12 mt-4">
-                <img class="img-fluid personas" src="../img/fotos/miqueas.JPG" alt="foto de miqueas">
+                <img data-aos="flip-up" class="img-fluid personas" src="../img/fotos/miqueas.JPG"
+                    alt="Foto de Miqueas Rivadeo volando Dron">
             </div>
 
         </div>
@@ -117,8 +125,8 @@
 
 
         <div class="container-fluid text-center mb-3">
-            <img class="banderas" src="../img/banderaMexico.png" alt="banderaDeMexicoxico">
-            <img class="banderas" src="../img/banderaArgentina.png" alt="banderaDeArgentina">
+            <img class="banderas" src="../img/banderaMexico.png" alt="bandera De Mexico">
+            <img class="banderas" src="../img/banderaArgentina.png" alt="bandera De Argentina">
         </div>
 
         <div class="container-fluid text-center text-light">
@@ -131,7 +139,7 @@
 
         <div class="container">
             <div class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-                <p class="col-md-4 mb-0 text-light">&copy; 2023 Nomdas Production <br> Todos los derechos reservados</p>
+                <p class="col-md-4 mb-0 text-light">&copy; 2023 Nomdas Production. Todos los derechos reservados</p>
 
                 <a href="/"
                     class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
@@ -165,6 +173,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
+
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script>
+        AOS.init();
+    </script>
 
 </body>
 
