--- a/html/servicios.html
+++ b/html/servicios.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Potenciamos tu marca con impacto audiovisual. Descubre nuestros servicios">
+    <meta name="description"
+        content="Captura la esencia de tus momentos con nuestra fotografía y video profesional en México y Argentina. Expertos en inmortalizar emociones, detalles y narrativas que perdurarán para siempre. Descubre más en Nomads Production.">
 
 
-    <title>SERVICIOS-NOMADS PRODUCTION</title>
+    <title>SERVICIOS - NOMADS PRODUCTION</title>
 
     <!-- CSS Boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -21,6 +22,9 @@
 
     <link rel="shortcut icon" href="../img/NP-removebg-preview.png" type="image/x-icon">
 
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 
 
 </head>
@@ -32,7 +36,7 @@
     <header class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">
-                <img class="logo img-fluid" src="../img/Logo-blanco.png" alt="Logo">
+                <img class="logo img-fluid" src="../img/Logo-blanco.png" alt="Logo Nomads Production">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -68,7 +72,7 @@
 
     <main>
         <div class="px-3 text-light text-center ms-5 me-5 mt-5 mb-5">
-            <h1>SERVICIOS</h1>
+            <h1 data-aos="fade-down">SERVICIOS</h1>
         </div>
 
         <div id="carouselExampleCaptions" class="carousel slide">
@@ -85,24 +89,21 @@
                     <img src="../img/Fotos/5.jpg" class="d-block w-100" alt="Fotografia5">
                     <div class="carousel-caption d-none d-md-block">
                         <h2>FOTOGRAFIA</h2>
-                        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo distinctio accusamus, aliquam
-                            ipsam eveniet sequi? </p>
+                        <p> ¡Precisa recordar las pequeñas cosas, mucho tiempo después de que hayas olvidado todo! </p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="../img/Fotos/6.jpg" class="d-block w-100" alt="Fotografia6">
                     <div class="carousel-caption d-none d-md-block">
                         <h2>FOTOGRAFIA</h2>
-                        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo distinctio accusamus, aliquam
-                            ipsam eveniet sequi? </p>
+                        <p> "Capturar un momento en una imagen es capturar la eternidad en un instante" </p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="../img/Fotos/7.jpg" class="d-block w-100" alt="Fotografia7">
                     <div class="carousel-caption d-none d-md-block">
                         <h2>FOTOGRAFIA</h2>
-                        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo distinctio accusamus, aliquam
-                            ipsam eveniet sequi? </p>
+                        <p> "La fotografía es una historia que no necesita ser contada con palabras" </p>
                     </div>
                 </div>
 
@@ -123,17 +124,20 @@
 
         <div class="object-fit-contain mt-5 ">
             <iframe class="videoPrincipal " src="https://www.youtube.com/embed/U_sz7f6BR-I?controls=0"
-                title="YouTube video player" frameborder="0"
+                title="Video de van por Puerto Escondido" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
 
         </div>
 
         <div class="px-3 text-light text-center ms-5 me-5 mt-5 mb-5">
-            <h2>Videos</h2>
-            <p class="lead text-light">" Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum nemo suscipit
-                provident quod odit porro numquam dolore. Eius nulla alias, optio quibusdam voluptatum magnam laboriosam
-                mollitia maxime quo fugit! Ullam? "</p>
+            <h2 data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0">VIDEOS
+            </h2>
+            <p data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0"
+                class="lead text-light">En la era digital, los videos son esenciales. Combinando imágenes, sonido y
+                narrativa, transmiten mensajes poderosos y emociones impactantes. Desde marketing hasta educación, los
+                videos cautivan y simplifican, creando conexiones auténticas en segundos. En Nomads Production, damos
+                vida a tus ideas a través de videos memorables y efectivos.</p>
         </div>
 
 
@@ -163,7 +167,7 @@
 
         <div class="container">
             <div class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-                <p class="col-md-4 mb-0 text-light">&copy; 2023 Nomdas Production <br> Todos los derechos reservados</p>
+                <p class="col-md-4 mb-0 text-light">&copy; 2023 Nomdas Production. Todos los derechos reservados</p>
 
                 <a href="/"
                     class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
@@ -197,6 +201,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
+
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script>
+        AOS.init();
+    </script>
 
 </body>
 
