--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="Capturando esencias a través de contenido audiovisual inspirador. ¡Bienvenidos!">
+    <meta name="description"
+        content="Explora el mundo a través de nuestra lente. Capturamos momentos únicos en México y Argentina. Convierte tus recuerdos en arte visual con Nomads Production.">
 
-    <title>Nomads Productión</title>
+    <title>Nomads Productión - Productora Audiovisual</title>
 
     <!-- CSS Boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -21,6 +22,9 @@
 
     <link rel="shortcut icon" href="img/NP-removebg-preview.png" type="image/x-icon">
 
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 
 
 </head>
@@ -32,7 +36,7 @@
     <header class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-                <img class="logo img-fluid" src="img/Logo-blanco.png" alt="Logo">
+                <img class="logo img-fluid" src="img/Logo-blanco.png" alt="Logo Nomads Production">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -70,6 +74,10 @@
 
     <main>
 
+
+        <h1 class="px-3 text-light text-center ms-5 me-5 mt-5 mb-5" data-aos="fade-down">NOMANDS PRODUCTION</h1>
+
+
         <div id="carouselExampleIndicators" class="carousel slide">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -81,13 +89,16 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/Fotos/1.jpg" class="d-block w-100 img-fluid img-thumbnail" alt="Foto Carrusel 1">
+                    <img src="img/Fotos/1.jpg" class="d-block w-100 img-fluid img-thumbnail"
+                        alt="Chicos brindando con botellas de cerveza">
                 </div>
                 <div class="carousel-item img.fluid">
-                    <img src="img/Fotos/2.jpg" class="d-block w-100 img-fluid img-thumbnail" alt="Foto Carrusel 2">
+                    <img src="img/Fotos/2.jpg" class="d-block w-100 img-fluid img-thumbnail"
+                        alt="Chico acostado dentro de van con celular">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/Fotos/3.jpg" class="d-block w-100 img-fluid img-thumbnail" alt="Foto carrusel 3">
+                    <img src="img/Fotos/3.jpg" class="d-block w-100 img-fluid img-thumbnail"
+                        alt="Van de frente en ruta">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -104,18 +115,67 @@
 
 
         <div class="px-3 text-light text-center ms-5 me-5 mt-5 mb-5">
-            <h1>Nomads Production</h1>
-            <p class="lead text-light">"Más que una marca, un equipo apasionado, con herramientas y conocimientos
-                profesionales para
-                cautivar tus sentidos.
-                ¡Bienvenidos a nuestro mundo! somos un equipo, dedicados a la generación y gestión profesional de
-                contenido
-                audiovisual. Capturamos la esencia única de tu marca, conectándola con tus valores y propósitos.
-                Inspiramos
-                a viajar, descubrir culturas y buscar nuevas aventuras"</p>
+            <p data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0"
+                class="lead text-light">"Más que una marca, un equipo apasionado, con herramientas y conocimientos
+                profesionales para cautivar tus sentidos.¡Bienvenidos a nuestro mundo! somos un equipo, dedicados a la
+                generación y gestión profesional de contenido audiovisual. Capturamos la esencia única de tu marca,
+                conectándola con tus valores y propósitos. Inspiramos a viajar, descubrir culturas y buscar nuevas
+                aventuras"</p>
         </div>
 
+        <h1 class="px-3 text-light text-center ms-5 me-5 mt-5 mb-5" data-aos="fade-down">TRABAJOS</h1>
+
+        <div class="row mb-5">
+            <div class="col-xl-6 col-md-6 col-sm-12 container-fluid text-center text-light p-5">
+
+                <iframe data-aos="flip-up" width="100%" height="315"
+                    src="https://www.youtube.com/embed/aNnTbHbpoPw?si=FTobXAAUyewqYChe" title="Video publicidad BMW"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+            </div>
+
+
+            <div class="col-xl-6 col-md-6 col-sm-12 container-fluid text-center text-light p-5">
+                <iframe data-aos="flip-up" width="100%" height="315"
+                    src="https://www.youtube.com/embed/WwijuaO5oWE?si=zyxZx4f9fFdqmCAT"
+                    title="Video Restaurante Méxicano The Reef Resort" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+
+            </div>
+
+            <div class="col-xl-6 col-md-6 col-sm-12 container-fluid text-center text-light p-5">
+                <iframe data-aos="flip-up" width="100%" height="315"
+                    src="https://www.youtube.com/embed/3joGVpGHMqs?si=0Qz7NXZyYl6NqQc9"
+                    title="Video Restaurante Italiano The Reef Resort" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+            </div>
+
+            <div class="col-xl-6 col-md-6 col-sm-12 container-fluid text-center text-light p-5">
+                <iframe data-aos="flip-up" width="100%" height="315"
+                    src="https://www.youtube.com/embed/U8lNOO2wVqQ?si=zxm4bWRW3qZ9Ko9D"
+                    title="Video habitación the reef resort" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+            </div>
+
+            <div class="col-xl-6 col-md-6 col-sm-12 container-fluid text-center text-light p-5">
+                <iframe data-aos="flip-up" width="100%" height="315"
+                    src="https://www.youtube.com/embed/Bf4yGSCJlcM?si=-1Dq6e1wNV7f7n5u"
+                    title="Video Publicitario TRX-Gym" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+            </div>
+
+        </div>
+
+
+
     </main>
+
+
 
 
 
@@ -139,7 +199,7 @@
 
         <div class="container">
             <div class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-                <p class="col-md-4 mb-0 text-light">&copy; 2023 Nomdas Production <br> Todos los derechos reservados</p>
+                <p class="col-md-4 mb-0 text-light">&copy; 2023 Nomdas Production. Todos los derechos reservados</p>
 
                 <a href="/"
                     class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
@@ -170,6 +230,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
+
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script>
+        AOS.init();
+    </script>
 
 </body>
 
