corrección tercera entrega 2.0

--- a/html/quienessomos.html
+++ b/html/quienessomos.html
@@ -111,6 +111,32 @@
                     alt="Foto de Miqueas Rivadeo volando Dron">
             </div>
 
+            <div class="col-xl-6 col-md-6 col-sm-12 container-fluid text-center text-light p-5">
+                <h2 data-aos="flip-up">Micaela</h2>
+                <p data-aos="flip-up" class="descripcion">Comunicadora 360°. Actualmente soy la responsable de la
+                    comunicación en The Reef Resorts, una cadena hotelera de Playa del Carmen. Amante de contar
+                    historias, viajar y leer. Detallista y que busca siempre la forma de que su creatividad cobre vida.
+                </p>
+            </div>
+            <div class="col-xl-6 col-md-6 col-sm-12 mt-4">
+                <img data-aos="flip-up" class="img-fluid personas" src="../img/Fotos/mica.jpeg"
+                    alt="Foto de Micaela Castilla">
+            </div>
+
+            <div class="col-xl-6 col-md-6 col-sm-12 container-fluid text-center text-light p-5">
+                <h2 data-aos="flip-up">Victoria</h2>
+                <p data-aos="flip-up" class="descripcion">Licenciada en Planificación Comunicacional y Community
+                    Manager.
+                    Amante del trabajo en equipo. Creo que las herramientas de un conjunto arrojan mejores resultados.
+                    Facilidad de palabra, comunicación y organización. Viajera por naturaleza y fanática de los
+                    desafíos.
+                </p>
+            </div>
+            <div class="col-xl-6 col-md-6 col-sm-12 mt-4">
+                <img data-aos="flip-up" class="img-fluid personas" src="../img/Fotos/victoria.jpeg"
+                    alt="Foto de Micaela Castilla">
+            </div>
+
         </div>
 
 
