corrección de nombre de foto de victoria

--- a/html/quienessomos.html
+++ b/html/quienessomos.html
@@ -134,7 +134,7 @@
             </div>
             <div class="col-xl-6 col-md-6 col-sm-12 mt-4">
                 <img data-aos="flip-up" class="img-fluid personas" src="../img/Fotos/victoria.jpeg"
-                    alt="Foto de Micaela Castilla">
+                    alt="Foto de Victoria Sharry">
             </div>
 
         </div>
